Links_Saver/styles.css
*{
    margin: 0px;
    padding: 0px;
}
body{
    min-width: 400px;
}

.container{
    height: 100vh;
    width: 100vw;
    background-color: darkorchid;
    display: grid;
    place-items: center;
}
.sub-container{
    height: 90%;
    width: 90%;
    max-width: 400px;
    max-height: 400px;
    /* border: 2px solid black; */
    border-radius: 15px;
    /* text-align: center; */
    padding: 50px 20px 0px 20px;
    
    background-color: white;
}
#input-el{
    border-radius: 2px;
    border: none;
    padding: 10px 0px 10px 5px;
    font-weight: 600;
    width: 100%;
    border: 1px solid gray;
}
.btn{
    padding: 10px 20px 10px 20px;
    display: inline-block;
    margin-top: 5px;
    background-color: #5f9341;
    border: none;
    color: white;
    font-weight: bold;
    box-sizing: border-box;
}
#links{
    margin-top: 5px;
}

#links-list li{
    list-style: none;
    text-decoration: none;
    
    margin-bottom: 5px;
}

#links-list a {
color: #5f9341;
}

